@@ -162,7 +162,7 @@ Davide Canova                       kc.canova@gmail.com
 Dawson Engler                       engler@stanford.edu
 Dean Gaudet                         dean-savannah@arctic.org
 Deepak Goel                         deego@gnufans.org
-Denis Excoffier                     denis.excoffier@airbus.com
+Denis Excoffier                     gcc@Denis-Excoffier.org
 Denis McKeon                        dmckeon@swcp.com
 Dennis Henriksen                    opus@flamingo.osrl.dk
 Dennis Clarke                       dclarke@blastwave.org
